--- a/popup.html
+++ b/popup.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formatador</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+
 </head>
 <body style="width: 300px; padding: 10px;">
     <h2>formatador</h2>
     <textarea id="inputText" rows="6" style="width: 100%;"placeholder="digite aqui"></textarea>
     <br><br>
-    <button id="formalizarBtn" style="width: 100%;">Formatar</button>   
+    <button id="formalizarBtn" type="button" class="btn btn-outline-primary" style="width: 100%;">Formatar</button>   
     <br><br>
     <textarea id="output" rows="6" style="width: 100%;" placeholder="resultado"></textarea>
 
     <script src="popup.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
